--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-Flask==2.2.5
-gunicorn==21.2.0
-pandas
-lxml
-qrcode
-reportlab
-PyPDF2
+Flask==3.0.3
+gunicorn==22.0.0
+reportlab==4.2.2
+qrcode==7.4.2
+Pillow==10.3.0
+pandas==2.2.2
+openpyxl==3.1.5
+PyPDF2==3.0.1
+requests==2.32.3
+
